--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "axios": "^1.3.6"
   }
 }
